fix(agent): preserve nullable MCP JSON evidence